--- a/.github/workflows/token.yml
+++ b/.github/workflows/token.yml
@@ -1,4 +1,4 @@
-name: Retrieve Media Prima Dailymotion HLS manifest with token
+name: Generated ElevenSport token
 
 # Controls when the action will run. 
 on:
