--- a/.github/workflows/vn21.yml
+++ b/.github/workflows/vn21.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: SukeTV
+name: Token for VN21
 
 # Controls when the action will run. 
 on:
